@@ -5710,4 +5710,6 @@ name)/mark
 
 /(\2)(\1)/
 
+"Z*(|d*){216}"
+
 # End of testinput1 
